--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
-googleapiclient.discovery
+googleapiclient
 pandas
 numpy
 seaborn
 pymongo
 datetime
 mysql.connector
-googleapiclient.errors
+
